--- a/2025.html
+++ b/2025.html
@@ -9,9 +9,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="accueil.html">QUENTIN BOUARD</a></li>
+      <li><a href="index.html">QUENTIN BOUARD</a></li>
       <li style="margin-bottom:15px;"></li>
-      <li><a href="index.html">WORK</a></li>
+      <li><a href="work.html">WORK</a></li>
       <li><a href="cv.html">CV</a></li>
       <li><a href="contact.html">CONTACT</a></li>
     </ul>
