--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="index.html">QUENTIN BOUARD</a></li>
             <li style="margin-bottom: 15px;"></li>
-            <li><a href="accueil.html" class="active">WORK</a></li>
+            <li><a href="work.html" class="active">WORK</a></li>
             <li><a href="cv.html">CV</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
