--- a/2024.html
+++ b/2024.html
@@ -107,7 +107,7 @@ l’initiale de son·sa producteur·ice.</div>
         <div class="work-item">
             <div class="work-left">
                 <div class="media-stack">
-                    <img src="images/2024/doncontredon.png" alt="Don contre don">">
+                    <img src="images/2024/doncontredon.png" alt="Don contre don">
                 </div>
                 <div class="work-title">Don contre don —</div>
             </div>
