--- a/2026.html
+++ b/2026.html
@@ -47,6 +47,19 @@
 
 
 
+<!--Nepomucen -->
+        <div class="work-item">
+            <div class="work-left">
+                <div class="media-stack">
+                  <img src="images/2026/nepomucen.png" alt="nepo1">
+                       
+                </div>
+                <div class="work-title">Sans titre — </div>
+                <div class="work-caption">Pendant la résidence <a href="https://fondazioneratti.org/art-lab/low-realisms" target="_blank">XXIX CSAV</a>, chaque jour,
+j'ai ajouté des fleurs à la statut du saint Jean de
+Népomucène tournant le dos au lac de Como.</div>
+            </div>
+        </div>
 
 
   <!--Supports -->
