--- a/cv.html
+++ b/cv.html
@@ -32,12 +32,7 @@
 
     <div class="cv-entry">
       <div class="cv-year">2020-2021</div>
-      <div class="cv-content"><p>Master 1 de Philosophie, Éthique à Strasbourg (CEERE)</p></div>
-    </div>
-
-    <div class="cv-entry">
-      <div class="cv-year">2019-2020</div>
-      <div class="cv-content"><p>Licence de Philosophie, Toulouse</p></div>
+      <div class="cv-content"><p>Master 1 de Philosophie Éthique à Strasbourg (CEERE)</p></div>
     </div>
 
     <h2>Stage / Assistance</h2>
