--- a/en/2024-en.html
+++ b/en/2024-en.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WORK 2024 — Quentin Bouard</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <div class="lang-toggle">
-    <a href="en/2024-en.html">EN</a>
+    <a href="../2024.html">FR</a>
   </div>
   <nav>
     <ul>
-      <li><a href="index.html">QUENTIN BOUARD</a></li>
+      <li><a href="index-en.html">QUENTIN BOUARD</a></li>
       <li style="margin-bottom:15px;"></li>
-      <li><a href="work.html">WORK</a></li>
-      <li><a href="cv.html">CV</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="work-en.html">WORK</a></li>
+      <li><a href="cv-en.html">CV</a></li>
+      <li><a href="contact-en.html">CONTACT</a></li>
     </ul>
   </nav>
   <div class="work-submenu">
     <ul>
-      <li><a href="2024.html" class="active">2024</a></li>
-      <li><a href="2025.html">2025</a></li>
-      <li><a href="2026.html">2026</a></li>
+      <li><a href="2024-en.html" class="active">2024</a></li>
+      <li><a href="2025-en.html">2025</a></li>
+      <li><a href="2026-en.html">2026</a></li>
     </ul>
   </div>
   <div class="container">
@@ -32,15 +32,15 @@
     <div class="work-item">
       <div class="work-left">
         <div class="media-stack">
-          <img src="images/2024/tapis1.jpg" alt="Image C1" />
-          <img src="images/2024/tapis2.png" alt="Image C2" />
-          <img src="images/2024/tapis3.png" alt="Image C3" />
+          <img src="../images/2024/tapis1.jpg" alt="Image C1" />
+          <img src="../images/2024/tapis2.png" alt="Image C2" />
+          <img src="../images/2024/tapis3.png" alt="Image C3" />
           <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/gg-mZ6tfFIA?si=9nrDSJHoQ3rV2MVq" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Retour d'expérience —</div>
-        <div class="work-caption">Collaboration avec Brune de Maurin.</div>
+        <div class="work-title">Retour d'expérience (Return of Experience) —</div>
+        <div class="work-caption">Collaboration with Brune de Maurin.</div>
       </div>
     <div class="spacer spacer--large"></div>
 
@@ -48,17 +48,17 @@
     <div class="work-item">
       <div class="work-left">
         <div class="media-stack">
-          <img src="images/2024/Dansepineale1.jpg" alt="Image C1" />
-          <img src="images/2024/Dansepineale2.jpg" alt="Image C2" />
-          <img src="images/2024/Dansepineale3.jpg" alt="Image C3" />
+          <img src="../images/2024/Dansepineale1.jpg" alt="Image C1" />
+          <img src="../images/2024/Dansepineale2.jpg" alt="Image C2" />
+          <img src="../images/2024/Dansepineale3.jpg" alt="Image C3" />
           <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/VIDEO_ID_C" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Danse Pinéale —</div>
+        <div class="work-title">Danse Pinéale (Pineal Dance) —</div>
         <div style="display: flex; gap: 20px; align-items: flex-start; width: 100%;">
-          <div class="work-caption" style="flex: 1;">Séance en visio live avec un psychiatre secteur 1. Un problème de caméra cassée a été prétexté pour que le psychiatre ignore le procédé. Le public est placé face à la visio. L'analysé danse et dialogue par le microphone. Pinéale : adjectif en référence à Descartes, définissant la glande pinéale comme le point de rencontre de l'esprit et du corps.</div>
-          <img src="images/2024/dansepinealside.png" alt="Danse pinéale side" style="flex: 1; max-width: 50%; height: auto; object-fit: contain; cursor: zoom-in;">
+          <div class="work-caption" style="flex: 1;">Live video session with a sector 1 psychiatrist. A broken camera problem was used as pretext so that the psychiatrist would ignore the process. The audience is placed facing the video call. The analysed dances and dialogues through the microphone. Pineal: adjective in reference to Descartes, defining the pineal gland as the meeting point of mind and body.</div>
+          <img src="../images/2024/dansepinealside.png" alt="Danse pinéale side" style="flex: 1; max-width: 50%; height: auto; object-fit: contain; cursor: zoom-in;">
         </div>
       </div>
           <div class="spacer spacer--large"></div>
@@ -67,9 +67,9 @@
            <div class="work-item">
             <div class="work-left">
                 <div class="media-stack">
-                    <img src="images/2024/arbrerobe.jpg" alt="Arbrerobe">
+                    <img src="../images/2024/arbrerobe.jpg" alt="Arbrerobe">
                 </div>
-                <div class="work-title">Articulation —</div>
+                <div class="work-title">Articulation (Articulation) —</div>
             </div>
         </div>
 
@@ -77,14 +77,14 @@
     <div class="work-item">
       <div class="work-left">
         <div class="media-stack">
-          <img src="images/2024/Panneau1.jpg" alt="Image C1" />
-          <img src="images/2024/Panneau2.jpg" alt="Image C2" />
-          <img src="images/2024/Panneau3.jpg" alt="Image C3" />
+          <img src="../images/2024/Panneau1.jpg" alt="Image C1" />
+          <img src="../images/2024/Panneau2.jpg" alt="Image C2" />
+          <img src="../images/2024/Panneau3.jpg" alt="Image C3" />
           <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/q9H8vE4yhzI?si=vzhnDmiIRBcFAqjm" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Corps Tête Panneau —</div>
+        <div class="work-title">Corps Tête Panneau (Body Head Panel) —</div>
         <div class="work-caption"></div>
       </div>
           <div class="spacer spacer--large"></div>
@@ -94,19 +94,19 @@
           <div class="work-item">
             <div class="work-left">
                 <div class="media-stack">
-                    <img src="images/2024/lsd.png" alt="Récolte de larmes">
+                    <img src="../images/2024/lsd.png" alt="Récolte de larmes">
                 </div>
-                <div class="work-title">Synthèse —</div>
-                <div class="work-caption">Récolte de larmes sur papier buvard conçu pour le stockage du LSD. Chaque larme est nommée selon l'initiale de son·sa producteur·ice.</div>
+                <div class="work-title">Synthèse (Synthesis) —</div>
+                <div class="work-caption">Tear collection on blotter paper designed for LSD storage. Each tear is named according to the initial of its producer.</div>
             </div>
         </div>
         <!--doncontredon -->
         <div class="work-item">
             <div class="work-left">
                 <div class="media-stack">
-                    <img src="images/2024/doncontredon.png" alt="Don contre don">
+                    <img src="../images/2024/doncontredon.png" alt="Don contre don">
                 </div>
-                <div class="work-title">Don contre don —</div>
+                <div class="work-title">Don contre don (Gift for Gift) —</div>
             </div>
         </div>
 
@@ -114,26 +114,13 @@
         <div class="work-item">
             <div class="work-left">
                 <div class="media-stack">
-                    <img src="images/2024/t.png" alt="Don contre don">
+                    <img src="../images/2024/t.png" alt="Don contre don">
                 </div>
-                <div class="work-title">T</div>
+                <div class="work-title">T (T)</div>
             </div>
         </div>
 
-        
-
-    
   </div>
-
-
-
-
-
-
-
-
-
-
 
   <div class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
   <div class="lightbox-overlay" id="lightbox" aria-hidden="true"><img alt=""></div>
