--- a/en/index-en.html
+++ b/en/index-en.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUENTIN BOUARD</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="lang-toggle">
-        <a href="en/index-en.html">EN</a>
+        <a href="../index.html">FR</a>
     </div>
     <nav>
         <ul>
-            <li><a href="index.html" class="active">QUENTIN BOUARD</a></li>
+            <li><a href="index-en.html" class="active">QUENTIN BOUARD</a></li>
             <li style="margin-bottom: 15px;"></li>
-            <li><a href="work.html">WORK</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="work-en.html">WORK</a></li>
+            <li><a href="cv-en.html">CV</a></li>
+            <li><a href="contact-en.html">CONTACT</a></li>
         </ul>
     </nav>
      <div class="container">
         <div class="work-item">
             <div class="work-left">
                 <div class="work-image">
-                    <img src="images/accueil.jpg" alt="Œuvre 1">
+                    <img src="../images/accueil.jpg" alt="Artwork 1">
                 </div>
             </div>
         </div>
