--- a/en/contact-en.html
+++ b/en/contact-en.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CONTACT — Quentin Bouard</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Contact — Quentin Bouard</title>
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <div class="lang-toggle">
-    <a href="en/contact-en.html">EN</a>
+    <a href="../contact.html">FR</a>
   </div>
   <nav>
     <ul>
-      <li><a href="index.html">QUENTIN BOUARD</a></li>
+      <li><a href="index-en.html">QUENTIN BOUARD</a></li>
       <li style="margin-bottom:15px;"></li>
-      <li><a href="work.html">WORK</a></li>
-      <li><a href="cv.html">CV</a></li>
-      <li><a href="contact.html" class="active">CONTACT</a></li>
+      <li><a href="work-en.html">WORK</a></li>
+      <li><a href="cv-en.html">CV</a></li>
+      <li><a href="contact-en.html" class="active">CONTACT</a></li>
     </ul>
   </nav>
 
   <div class="container">
     <p class="contact-email">quentin.bouard@hotmail.fr</p>
   </div>
-
   <div class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
   <div class="lightbox-overlay" id="lightbox" aria-hidden="true"><img alt=""></div>
   <script>
