--- a/en/cv-en.html
+++ b/en/cv-en.html
@@ -1,80 +1,80 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CV — Quentin Bouard</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <div class="lang-toggle">
-    <a href="en/cv-en.html">EN</a>
+    <a href="../cv.html">FR</a>
   </div>
   <nav>
     <ul>
-      <li><a href="index.html">QUENTIN BOUARD</a></li>
+      <li><a href="index-en.html">QUENTIN BOUARD</a></li>
       <li style="margin-bottom:15px;"></li>
-      <li><a href="work.html">WORK</a></li>
-      <li><a href="cv.html" class="active">CV</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="work-en.html">WORK</a></li>
+      <li><a href="cv-en.html" class="active">CV</a></li>
+      <li><a href="contact-en.html">CONTACT</a></li>
     </ul>
   </nav>
 
   <main class="cv-page">
-    <h2>Formation</h2>
+    <h2>Education</h2>
 
     <div class="cv-entry">
       <div class="cv-year">2025-2026</div>
-      <div class="cv-content"><p>École Nationale des Beaux-Arts de Paris</p></div>
+      <div class="cv-content"><p>National School of Fine Arts of Paris</p></div>
     </div>
 
     <div class="cv-entry">
       <div class="cv-year">2023-2025</div>
-      <div class="cv-content"><p>École Nationale des Beaux-Arts de Lyon</p></div>
+      <div class="cv-content"><p>National School of Fine Arts of Lyon</p></div>
     </div>
 
     <div class="cv-entry">
       <div class="cv-year">2020-2021</div>
-      <div class="cv-content"><p>Master 1 de Philosophie Éthique à Strasbourg (CEERE)</p></div>
+      <div class="cv-content"><p>Master 1 Ethics Philosophy in Strasbourg (CEERE)</p></div>
     </div>
 
-    <h2>Stage / Assistance</h2>
+    <h2>Internships / Assistance</h2>
 
     <div class="cv-entry">
       <div class="cv-year">2025</div>
-      <div class="cv-content"><p>Myriam Leowitz / Chorégraphe – Aide à la création d'une pièce pour Playground</p></div>
+      <div class="cv-content"><p>Myriam Leowitz / Choreographer – Assistance in creating a piece for Playground</p></div>
     </div>
 
     <div class="cv-entry">
       <div class="cv-year">2025</div>
       <div class="cv-content">
-        <p>Florian Fouché / Plasticien – Montage de l'exposition</p>
-        <p class="cv-italic">SÉCURITÉ SOCIALE PRÉLUDE – Vies institutionnelles à Bétonsalon</p>
+        <p>Florian Fouché / Artist – Exhibition setup</p>
+        <p class="cv-italic">SÉCURITÉ SOCIALE PRÉLUDE – Vies institutionnelles at Bétonsalon</p>
       </div>
     </div>
 
     <div class="cv-entry">
       <div class="cv-year">2024</div>
       <div class="cv-content">
-        <p>Florian Fouché / Plasticien – Assistance pour l'exposition</p>
-        <p class="cv-italic">FIN DE PARTIE PRÉLUDE au centre d'art GwinZegal</p>
+        <p>Florian Fouché / Artist – Exhibition assistance</p>
+        <p class="cv-italic">FIN DE PARTIE PRÉLUDE at centre d'art GwinZegal</p>
       </div>
     </div>
 
-    <h2>Résidences / Expositions</h2>
+    <h2>Residencies / Exhibitions</h2>
 
     <div class="cv-entry">
       <div class="cv-year">2025</div>
       <div class="cv-content">
         <p>Fondation Antonio Ratti – CSAV Artists' Research Laboratory,</p>
-        <p class="cv-italic">Low Realisms dirigé par Ed Atkins</p>
+        <p class="cv-italic">Low Realisms directed by Ed Atkins</p>
       </div>
     </div>
 
     <div class="cv-entry">
       <div class="cv-year">2025</div>
       <div class="cv-content">
-        <p>Exposition collective, Petite Galerie Françoise Besson –</p>
+        <p>Group exhibition, Petite Galerie Françoise Besson –</p>
         <p class="cv-italic">En chair et en os</p>
       </div>
     </div>
@@ -92,7 +92,6 @@
         <p>Camping Lyon – Tatiana Julien</p>
       </div>
     </div>
-
 
   </main>
   <div class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
