--- a/en/work-en.html
+++ b/en/work-en.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WORK — Quentin Bouard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
     <div class="lang-toggle">
-        <a href="en/work-en.html">EN</a>
+        <a href="../work.html">FR</a>
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">QUENTIN BOUARD</a></li>
+            <li><a href="index-en.html">QUENTIN BOUARD</a></li>
             <li style="margin-bottom: 15px;"></li>
-            <li><a href="work.html" class="active">WORK</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="work-en.html" class="active">WORK</a></li>
+            <li><a href="cv-en.html">CV</a></li>
+            <li><a href="contact-en.html">CONTACT</a></li>
         </ul>
     </nav>
     <div class="work-submenu">
         <ul>
-            <li><a href="2024.html">2024</a></li>
-            <li><a href="2025.html">2025</a></li>
-            <li><a href="2026.html">2026</a></li>
+            <li><a href="2024-en.html">2024</a></li>
+            <li><a href="2025-en.html">2025</a></li>
+            <li><a href="2026-en.html">2026</a></li>
         </ul>
     </div>
 
