--- a/2024.html
+++ b/2024.html
@@ -31,6 +31,7 @@
     <!-- Retour d'expérience -->
     <div class="work-item">
       <div class="work-left">
+        <div class="work-title">Retour d'expérience —</div>
         <div class="media-stack">
           <img src="images/2024/tapis1.jpg" alt="Image C1" />
           <img src="images/2024/tapis2.png" alt="Image C2" />
@@ -39,7 +40,7 @@
             <iframe src="https://www.youtube.com/embed/gg-mZ6tfFIA?si=9nrDSJHoQ3rV2MVq" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Retour d'expérience —</div>
+        <div style="margin-top: 45px;"></div>
         <div class="work-caption">Collaboration avec Brune de Maurin.</div>
       </div>
     <div class="spacer spacer--large"></div>
@@ -47,6 +48,7 @@
       <!-- Danse pineale -->
     <div class="work-item">
       <div class="work-left">
+        <div class="work-title">Danse Pinéale —</div>
         <div class="media-stack">
           <img src="images/2024/Dansepineale1.jpg" alt="Image C1" />
           <img src="images/2024/Dansepineale2.jpg" alt="Image C2" />
@@ -55,7 +57,7 @@
             <iframe src="https://www.youtube.com/embed/VIDEO_ID_C" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Danse Pinéale —</div>
+        <div style="margin-top: 45px;"></div>
         <div style="display: flex; gap: 20px; align-items: flex-start; width: 100%;">
           <div class="work-caption" style="flex: 1;">Séance en visio live avec un psychiatre secteur 1. Un problème de caméra cassée a été prétexté pour que le psychiatre ignore le procédé. Le public est placé face à la visio. L'analysé danse et dialogue par le microphone. Pinéale : adjectif en référence à Descartes, définissant la glande pinéale comme le point de rencontre de l'esprit et du corps.</div>
           <img src="images/2024/dansepinealside.png" alt="Danse pinéale side" style="flex: 1; max-width: 50%; height: auto; object-fit: contain; cursor: zoom-in;">
@@ -66,16 +68,17 @@
     <!-- Arbre -->
            <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Articulation —</div>
                 <div class="media-stack">
                     <img src="images/2024/arbrerobe.jpg" alt="Arbrerobe">
                 </div>
-                <div class="work-title">Articulation —</div>
             </div>
         </div>
 
            <!--Panneau -->
     <div class="work-item">
       <div class="work-left">
+        <div class="work-title">Corps Tête Panneau —</div>
         <div class="media-stack">
           <img src="images/2024/Panneau1.jpg" alt="Image C1" />
           <img src="images/2024/Panneau2.jpg" alt="Image C2" />
@@ -84,7 +87,7 @@
             <iframe src="https://www.youtube.com/embed/q9H8vE4yhzI?si=vzhnDmiIRBcFAqjm" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Corps Tête Panneau —</div>
+        <div style="margin-top: 45px;"></div>
         <div class="work-caption"></div>
       </div>
           <div class="spacer spacer--large"></div>
@@ -93,30 +96,31 @@
 <!--lsd -->
           <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Synthèse —</div>
                 <div class="media-stack">
                     <img src="images/2024/lsd.png" alt="Récolte de larmes">
                 </div>
-                <div class="work-title">Synthèse —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Récolte de larmes sur papier buvard conçu pour le stockage du LSD. Chaque larme est nommée selon l'initiale de son·sa producteur·ice.</div>
             </div>
         </div>
         <!--doncontredon -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Don contre don —</div>
                 <div class="media-stack">
                     <img src="images/2024/doncontredon.png" alt="Don contre don">
                 </div>
-                <div class="work-title">Don contre don —</div>
             </div>
         </div>
 
         <!--T -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">T</div>
                 <div class="media-stack">
                     <img src="images/2024/t.png" alt="Don contre don">
                 </div>
-                <div class="work-title">T</div>
             </div>
         </div>
 
