--- a/2025.html
+++ b/2025.html
@@ -30,16 +30,17 @@
    <!--Monument mobile -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Monument mobile —</div>
                 <div class="media-stack">
                     <img src="images/2025/monumentmobile.png" alt="Don contre don">
                 </div>
-                <div class="work-title">Monument mobile —</div>
             </div>
         </div>
   <div class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
   <!-- Fluxus (exemple simplifié: image unique + texte) -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Fluxus encore ? —</div>
                 <div class="media-stack">
                     <img src="images/2025/fluxus1.png" alt="Fluxus 1">
                     <img src="images/2025/fluxus2.jpg" alt="Fluxus 2">
@@ -48,7 +49,7 @@
                         <iframe src="https://www.youtube.com/embed/scZZMLrDBEg?si=C4ZEkYaQ53VrAS2r" title="Fluxus vidéo" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Fluxus encore ? —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Collaboration avec Amalia Soubise.</div>
                  <div class="spacer spacer--large"></div>
             </div>
@@ -57,6 +58,7 @@
         <!-- Alba (image statique) -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Alba —</div>
                 <div class="media-stack">
                     <img src="images/2025/alba1.png" alt="Alba 1">
                     <img src="images/2025/alba2.png" alt="Alba 2">
@@ -65,7 +67,7 @@
                         <iframe src="https://www.youtube.com/embed/2oRCst6toQU?si=ZAcJvZMJ9Ke6TYdG" title="Alba vidéo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Alba —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Collaboration avec Lino Jaricot Garcia</div>
                     <div class="spacer spacer--large"></div>
             </div>
@@ -74,6 +76,7 @@
   <!-- Immeuble -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Immeuble —</div>
                 <div class="media-stack">
                     <img src="images/2025/immeuble1.jpg" alt="CC1">
                     <img src="images/2025/immeuble2.png" alt="CC2">
@@ -82,13 +85,14 @@
                         <iframe src="https://www.youtube.com/embed/ASuTTkZsGQ8?si=VaZCWsRBGOoZv5HR" title="Immeuble" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Immeuble —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Vidéo chorégraphiée la caméra est placée en équilibre au bout d'un trépied sur mon menton, les immeubles (<em>qui ne peut être déplacé</em>) de la ville me reflètent.</div>
                     <div class="spacer spacer--large"></div>
 
                     <!--Cher Joachim -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Cher Joachim —</div>
                 <div class="media-stack">
                     <img src="images/2025/cherjoachim1.png" alt="CC1">
                     <img src="images/2025/cherjoachim2.png" alt="CC2">
@@ -98,11 +102,9 @@
                         <iframe src="https://www.youtube.com/embed/tb3kbPp_fSk?si=uNlGKIgqODJmAQPR" title="Alba vidéo" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Cher Joachim —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">J'envoie une carte postale à Joachim, avec écrit au dos un lien. Le lien envoie sur une vidéo du postage de la lettre. Photo Brune de Maurin</div>
-            </div>
-           
-                    <div class="spacer spacer--large"></div>
+                <div class="spacer spacer--large"></div>
             </div>
         </div>
     <div class="lightbox-overlay" id="lightbox" aria-hidden="true"><img alt=""></div>
