--- a/2026.html
+++ b/2026.html
@@ -53,11 +53,12 @@
 <!--Nepomucen -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Sans titre —</div>
                 <div class="media-stack">
                   <img src="images/2026/nepomucen.png" alt="nepo1">
                        
                 </div>
-                <div class="work-title">Sans titre —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Pendant la résidence <a href="https://fondazioneratti.org/art-lab/low-realisms" target="_blank">XXIX CSAV</a>, chaque jour, j'ai ajouté des fleurs à la statut du saint Jean de Népomucène tournant le dos au lac de Como.</div>
             </div>
         </div>
@@ -66,6 +67,7 @@
   <!--Supports -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Supports —</div>
                 <div class="media-stack">
                   <img src="images/2026/support1.JPG" alt="support1">
                   <img src="images/2026/support2.jpeg" alt="support2">
@@ -74,7 +76,6 @@
 
                     
                 </div>
-                <div class="work-title">Supports —</div>
             </div>
         </div>
 
