--- a/en/2025-en.html
+++ b/en/2025-en.html
@@ -30,16 +30,17 @@
    <!--Monument mobile -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Monument mobile (Mobile Monument) —</div>
                 <div class="media-stack">
                     <img src="../images/2025/monumentmobile.png" alt="Don contre don">
                 </div>
-                <div class="work-title">Monument mobile (Mobile Monument) —</div>
             </div>
         </div>
   <div class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
   <!-- Fluxus -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Fluxus encore ? (Fluxus Again?) —</div>
                 <div class="media-stack">
                     <img src="../images/2025/fluxus1.png" alt="Fluxus 1">
                     <img src="../images/2025/fluxus2.jpg" alt="Fluxus 2">
@@ -48,7 +49,7 @@
                         <iframe src="https://www.youtube.com/embed/scZZMLrDBEg?si=C4ZEkYaQ53VrAS2r" title="Fluxus vidéo" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Fluxus encore ? (Fluxus Again?) —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Collaboration with Amalia Soubise.</div>
                  <div class="spacer spacer--large"></div>
             </div>
@@ -57,6 +58,7 @@
         <!-- Alba -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Alba (Alba) —</div>
                 <div class="media-stack">
                     <img src="../images/2025/alba1.png" alt="Alba 1">
                     <img src="../images/2025/alba2.png" alt="Alba 2">
@@ -65,7 +67,7 @@
                         <iframe src="https://www.youtube.com/embed/2oRCst6toQU?si=ZAcJvZMJ9Ke6TYdG" title="Alba vidéo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Alba (Alba) —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Collaboration with Lino Jaricot Garcia</div>
                     <div class="spacer spacer--large"></div>
             </div>
@@ -74,6 +76,7 @@
   <!-- Immeuble -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Immeuble (Building) —</div>
                 <div class="media-stack">
                     <img src="../images/2025/immeuble1.jpg" alt="CC1">
                     <img src="../images/2025/immeuble2.png" alt="CC2">
@@ -82,13 +85,14 @@
                         <iframe src="https://www.youtube.com/embed/ASuTTkZsGQ8?si=VaZCWsRBGOoZv5HR" title="Immeuble" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Immeuble (Building) —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Choreographed video where the camera is placed in balance at the end of a tripod on my chin, the buildings (<em>immeuble in french litteraly :which cannot be moved</em>) of the city reflect me.</div>
                     <div class="spacer spacer--large"></div>
 
                     <!--Cher Joachim -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Cher Joachim (Dear Joachim) —</div>
                 <div class="media-stack">
                     <img src="../images/2025/cherjoachim1.png" alt="CC1">
                     <img src="../images/2025/cherjoachim2.png" alt="CC2">
@@ -98,7 +102,7 @@
                         <iframe src="https://www.youtube.com/embed/tb3kbPp_fSk?si=uNlGKIgqODJmAQPR" title="Alba vidéo" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="work-title">Cher Joachim (Dear Joachim) —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">I send a postcard to Joachim, with a link written on the back. The link leads to a video of mailing the letter. Photo by Brune de Maurin.</div>
             </div>
 
