--- a/en/2026-en.html
+++ b/en/2026-en.html
@@ -51,11 +51,12 @@
 <!--Nepomucen -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Sans titre (Untitled) —</div>
                 <div class="media-stack">
                   <img src="../images/2026/nepomucen.png" alt="nepo1">
                                     
                 </div>
-                <div class="work-title">Sans titre (Untitled) —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">During the <a href="https://fondazioneratti.org/art-lab/low-realisms" target="_blank">XXIX CSAV</a> residency, every day, I added flowers to the statue of Saint John of Nepomuk turning his back to Lake Como.</div>
             </div>
         </div>
@@ -63,6 +64,7 @@
   <!--Supports -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Supports (Supports) —</div>
                 <div class="media-stack">
                   <img src="../images/2026/support1.JPG" alt="support1">
                   <img src="../images/2026/support2.jpeg" alt="support2">
@@ -70,7 +72,6 @@
                   <img src="../images/2026/Support4.jpeg" alt="support4">
                     
                 </div>
-                <div class="work-title">Supports (Supports) —</div>
             </div>
         </div>
 
