--- a/en/2024-en.html
+++ b/en/2024-en.html
@@ -31,6 +31,7 @@
     <!-- Retour d'expérience -->
     <div class="work-item">
       <div class="work-left">
+        <div class="work-title">Retour d'expérience (Return of Experience) —</div>
         <div class="media-stack">
           <img src="../images/2024/tapis1.jpg" alt="Image C1" />
           <img src="../images/2024/tapis2.png" alt="Image C2" />
@@ -39,7 +40,7 @@
             <iframe src="https://www.youtube.com/embed/gg-mZ6tfFIA?si=9nrDSJHoQ3rV2MVq" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Retour d'expérience (Return of Experience) —</div>
+        <div style="margin-top: 45px;"></div>
         <div class="work-caption">Collaboration with Brune de Maurin.</div>
       </div>
     <div class="spacer spacer--large"></div>
@@ -47,6 +48,7 @@
       <!-- Danse pineale -->
     <div class="work-item">
       <div class="work-left">
+        <div class="work-title">Danse Pinéale (Pineal Dance) —</div>
         <div class="media-stack">
           <img src="../images/2024/Dansepineale1.jpg" alt="Image C1" />
           <img src="../images/2024/Dansepineale2.jpg" alt="Image C2" />
@@ -55,7 +57,7 @@
             <iframe src="https://www.youtube.com/embed/VIDEO_ID_C" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Danse Pinéale (Pineal Dance) —</div>
+        <div style="margin-top: 45px;"></div>
         <div style="display: flex; gap: 20px; align-items: flex-start; width: 100%;">
           <div class="work-caption" style="flex: 1;">Live video session with a sector 1 psychiatrist. A broken camera problem was used as pretext so that the psychiatrist would ignore the process. The audience is placed facing the video call. The analysed dances and dialogues through the microphone. Pineal: adjective in reference to Descartes, defining the pineal gland as the meeting point of mind and body.</div>
           <img src="../images/2024/dansepinealside.png" alt="Danse pinéale side" style="flex: 1; max-width: 50%; height: auto; object-fit: contain; cursor: zoom-in;">
@@ -66,16 +68,17 @@
     <!-- Arbre -->
            <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Articulation (Articulation) —</div>
                 <div class="media-stack">
                     <img src="../images/2024/arbrerobe.jpg" alt="Arbrerobe">
                 </div>
-                <div class="work-title">Articulation (Articulation) —</div>
             </div>
         </div>
 
            <!--Panneau -->
     <div class="work-item">
       <div class="work-left">
+        <div class="work-title">Corps Tête Panneau (Body Head Panel) —</div>
         <div class="media-stack">
           <img src="../images/2024/Panneau1.jpg" alt="Image C1" />
           <img src="../images/2024/Panneau2.jpg" alt="Image C2" />
@@ -84,7 +87,7 @@
             <iframe src="https://www.youtube.com/embed/q9H8vE4yhzI?si=vzhnDmiIRBcFAqjm" title="Vidéo C" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="work-title">Corps Tête Panneau (Body Head Panel) —</div>
+        <div style="margin-top: 45px;"></div>
         <div class="work-caption"></div>
       </div>
           <div class="spacer spacer--large"></div>
@@ -93,30 +96,31 @@
 <!--lsd -->
           <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Synthèse (Synthesis) —</div>
                 <div class="media-stack">
                     <img src="../images/2024/lsd.png" alt="Récolte de larmes">
                 </div>
-                <div class="work-title">Synthèse (Synthesis) —</div>
+                <div style="margin-top: 45px;"></div>
                 <div class="work-caption">Tear collection on blotter paper designed for LSD storage. Each tear is named according to the initial of its producer.</div>
             </div>
         </div>
         <!--doncontredon -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">Don contre don (Gift for Gift) —</div>
                 <div class="media-stack">
                     <img src="../images/2024/doncontredon.png" alt="Don contre don">
                 </div>
-                <div class="work-title">Don contre don (Gift for Gift) —</div>
             </div>
         </div>
 
         <!--T -->
         <div class="work-item">
             <div class="work-left">
+                <div class="work-title">T (T)</div>
                 <div class="media-stack">
                     <img src="../images/2024/t.png" alt="Don contre don">
                 </div>
-                <div class="work-title">T (T)</div>
             </div>
         </div>
 
